:bug: Fix: 마이페이지 스크랩 부분 500 에러 수정